@@ -1,3 +1,15 @@
+2011-01-23  Andrey Kosyakov  <caseq@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
+        Web Inspector: summary bar is not resized properly with the rest of network panel
+        https://bugs.webkit.org/show_bug.cgi?id=52881
+
+        * inspector/front-end/NetworkPanel.js:
+        (WebInspector.NetworkPanel.prototype.updateSidebarWidth):
+        (WebInspector.NetworkPanel.prototype._positionSummaryBar):
+        (WebInspector.NetworkPanel.prototype._toggleGridMode):
+
 2011-01-19  MORITA Hajime  <morrita@google.com>
 
         Reviewed by Ryosuke Niwa.
